fix composer dos version

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
             "config": {
                 "jwt": "config/config.php"
             }
-        }
+        },
+		"branch-alias": {
+		    "dev-master": "1.1-dev"
+		}
     },
     "minimum-stability": "dev"
 }
