--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "weilewantieba",
+            "name": "weileawntieba/dos-jwt",
             "email": "weilewantieba@126.com"
         }
     ],
