--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "php": "^7.0 || ^8.0",
-        "weilewantieba/jwt": "3.3.*", 
+        "weilewantieba/jwt": "^1.0", 
         "topthink/framework": "^5.1.10 || ^6.0.0"
     },
     "license": "MIT",
