--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
     "type": "library",
     "require": {
         "php": "^7.0 || ^8.0",
-        "topthink/framework": "^5.1.10 || ^6.0.0",
-		"weilewantieba/jwt": "^2.0"
+		"weilewantieba/jwt": "^2.0",
+        "topthink/framework": "^5.1.10 || ^6.0.0"
+		
     },
     "license": "MIT",
     "authors": [
